2009-08-31  Anthony Green  <green@moxielogic.com>

	* init.el (atg/erc): Add erc configuration.

	* Created everything.

