@@ -1,3 +1,8 @@
+2009-09-02  Anthony Green  <green@moxielogic.com>
+
+	* init.el: Add copyright update and some mode setting tweaks from
+	tromey.
+
 2009-08-31  Anthony Green  <green@moxielogic.com>
 
 	* init.el (atg/erc): Add erc configuration.
